# OpenGL

./: .dir-locals.el  .gitignore  CMakeLists.txt  README.md
include/: callbacks.hpp  shader.hpp  shader_utility.hpp
include/glad/: glad.h
res/shaders/: basic.glsl  projection.glsl  texture.glsl  transform.glsl
src/: callbacks.cpp  glad.c  main.cpp  shader.cpp  shader_utility.cpp
